[package]
name = "rustcap"
version = "0.1.0"
authors = ["Michael McLellan <jmikem825@gmail.com>"]

[workspace]
members = ["pcap-sys"]

[dependencies]
libc = "0.2.43"
bitflags = "1.0.4"
pcap-sys = { version = "0.1", path = "pcap-sys" }
pnet = { version = "0.21.0", optional = true, default-features = false}

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.6"
features = ["ws2def", "ws2ipdef"]

[features]
libpnet = ["pnet"]
