[package]
name = "pcap-sys"
version = "0.1.2"
description = "Low-level bindings to libpcap"
homepage = "https://github.com/jmmk/rustcap"
repository = "https://github.com/jmmk/rustcap"
authors = ["Michael McLellan <jmikem825@gmail.com>"]
keywords = ["pcap", "libpcap"]
build = "build.rs"
license = "MIT"
readme = "README.md"

[dependencies]
libc = "0.2.43"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.6"
features = ["ws2def", "winsock2"]

[build-dependencies]
pkg-config = "0.3.14"
