[package]
name = "pcap-sys"
version = "0.1.3"
description = "Low-level bindings to libpcap"
homepage = "https://github.com/jmmk/rustcap"
repository = "https://github.com/jmmk/rustcap"
authors = ["Michael McLellan <jmikem825@gmail.com>"]
keywords = ["pcap", "libpcap"]
build = "build.rs"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/pcap-sys"

[dependencies]
libc = "0.2.43"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.6"
features = ["ws2def", "winsock2"]

[build-dependencies]
pkg-config = "0.3.14"
cc = { version = "1.0", optional = true }
cmake = { version = "0.1", optional = true }

[features]
static-libpcap = ["cc", "cmake"]
